tests/snapshots/files__merge_during_rebuild_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
Node: 4
Node: 4
distance: 3
distance: 1
