tests/snapshots/files__merge_during_rebuild_term_encoding.snap
---
source: tests/files.rs
expression: snapshot_content
---
Node: 4
Node: 4
distance: 2
distance: 1
