tests/snapshots/files__name_resolution_term_encoding.snap
---
source: tests/files.rs
expression: snapshot_content
---
Add: 2
Add: 2
Num: 5
Num: 5
Add: 2
Add: 2
Num: 5
Num: 5
