tests/snapshots/files__naturals_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(let t0 (S (S (S (Z)))))
(let t1 (S t0))
(let t2 (Plus (S (S (Z))) (S (S (Z)))))
(let prop0 (= t1 t2))
(let t3 (Plus (S (Z)) (S (S (Z)))))
(let t4 (S t3))
(let t5 (premises (Fiat (= t2 t2))))
(let t6 (n (S (S (Z)))))
(let t7 (substitution (@rewrite_var__1 t2) (m (S (Z))) t6))
(let t8 (Plus (Z) (S (S (Z)))))
(let t9 (S t8))
(let t10
  (premises
                (Rule
                  (= t3 t3)
                  (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                  t5
                  t7)))
(let t11 (substitution (@rewrite_var__1 t3) (m (Z)) t6))
(Trans
  prop0
  (Fiat (= t1 t1))
  (Sym
    prop0
    (Congr
      (= t2 t1)
      (Sym
        (= t2 t4)
        (Rule (= t4 t2) (name "(rewrite (Plus (S m) n) (S (Plus m n)))") t5 t7))
      (Congr
        (= t3 t0)
        (Sym
          (= t3 t9)
          (Rule
            (= t9 t3)
            (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
            t10
            t11))
        (Rule
          (= t8 (S (S (Z))))
          (name "(rewrite (Plus (Z ) n) n)")
          (premises
            (Rule
              (= t8 t8)
              (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
              t10
              t11))
          (substitution t6 (@rewrite_var__ t8)))
        0)
      0)))
(let t0 (S (S (S (Z)))))
(let t1 (Times (S (S (Z))) t0))
(let t2 (Plus (S (S (Z))) (S (S (Z)))))
(let t3 (Plus (S (S (Z))) t2))
(let prop0 (= t1 t3))
(let prf0 (Fiat (= t1 t1)))
(let t4 (S t0))
(let t5 (Plus (S (Z)) t4))
(let t6 (S t5))
(let prop1 (= t1 t6))
(let t7 (Times (S (Z)) t0))
(let t8 (Plus (S (S (Z))) t7))
(let t9 (S t8))
(let t10 (Plus t0 t7))
(let t11 (premises prf0))
(let t12 (n t0))
(let t13 (substitution (m (S (Z))) t12 (@rewrite_var__3 t1)))
(let t14
  (premises
                  (Sym
                    (= t1 t10)
                    (Rule
                      (= t10 t1)
                      (name "(rewrite (Times (S m) n) (Plus n (Times m n)))")
                      t11
                      t13))))
(let t15 (m (S (S (Z)))))
(let t16 (n t7))
(let t17 (substitution (@rewrite_var__1 t1) t15 t16))
(let t18 (S t4))
(let t19 (Plus (S (Z)) t7))
(let t20 (S t19))
(let t21
  (premises
                      (Rule
                        (= t8 t8)
                        (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                        t14
                        t17)))
(let t22 (substitution (@rewrite_var__1 t8) (m (S (Z))) t16))
(let t23 (Plus (Z) t7))
(let t24 (S t23))
(let t25
  (premises
                          (Rule
                            (= t19 t19)
                            (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                            t21
                            t22)))
(let t26 (substitution (@rewrite_var__1 t19) (m (Z)) t16))
(let t27 (Times (Z) t0))
(let t28 (Plus (S (S (Z))) t27))
(let t29 (S t28))
(let t30 (Plus t0 t27))
(let t31
  (premises
                                (Rule
                                  (= t7 t7)
                                  (name
                                    "(rewrite (Times (S m) n) (Plus n (Times m n)))")
                                  t11
                                  t13)))
(let t32 (substitution (m (Z)) t12 (@rewrite_var__3 t7)))
(let t33
  (premises
                          (Sym
                            (= t7 t30)
                            (Rule
                              (= t30 t7)
                              (name
                                "(rewrite (Times (S m) n) (Plus n (Times m n)))")
                              t31
                              t32))))
(let t34 (substitution (@rewrite_var__1 t7) t15 (n t27)))
(let t35 (Plus (S (Z)) (Z)))
(let t36 (S t35))
(let t37
  (premises
                            (Congr
                              (= t28 (Plus (S (S (Z))) (Z)))
                              (Rule
                                (= t28 t28)
                                (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                                t33
                                t34)
                              (Rule
                                (= t27 (Z))
                                (name "(rewrite (Times (Z ) n) (Z ))")
                                (premises
                                  (Rule
                                    (= t27 t27)
                                    (name
                                      "(rewrite (Times (S m) n) (Plus n (Times m n)))")
                                    t31
                                    t32))
                                (substitution (@rewrite_var__2 t27) t12))
                              1)))
(let t38 (substitution (@rewrite_var__1 t28) (m (S (Z))) (n (Z))))
(let t39 (S (Plus (Z) (Z))))
(let t40
  (premises
                              (Rule
                                (= t35 t35)
                                (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                                t37
                                t38)))
(let t41 (substitution (@rewrite_var__1 t35) (m (Z)) (n (Z))))
(let t42 (Plus (Z) t4))
(let t43 (S t42))
(let t44 (Plus (S (Z)) (S (S (Z)))))
(let t45 (S t44))
(let t46 (premises (Fiat (= t2 t2))))
(let t47 (n (S (S (Z)))))
(let t48
  (substitution
                                      (@rewrite_var__1 t2)
                                      (m (S (Z)))
                                      t47))
(let t49 (Plus (Z) (S (S (Z)))))
(let t50 (S t49))
(let t51
  (premises
                                        (Rule
                                          (= t44 t44)
                                          (name
                                            "(rewrite (Plus (S m) n) (S (Plus m n)))")
                                          t46
                                          t48)))
(let t52
  (substitution
                                        (@rewrite_var__1 t44)
                                        (m (Z))
                                        t47))
(let t53
  (premises
                            (Congr
                              (= t3 (Plus (S (S (Z))) t4))
                              (Fiat (= t3 t3))
                              (Congr
                                (= t2 t4)
                                (Sym
                                  (= t2 t45)
                                  (Rule
                                    (= t45 t2)
                                    (name
                                      "(rewrite (Plus (S m) n) (S (Plus m n)))")
                                    t46
                                    t48))
                                (Congr
                                  (= t44 t0)
                                  (Sym
                                    (= t44 t50)
                                    (Rule
                                      (= t50 t44)
                                      (name
                                        "(rewrite (Plus (S m) n) (S (Plus m n)))")
                                      t51
                                      t52))
                                  (Rule
                                    (= t49 (S (S (Z))))
                                    (name "(rewrite (Plus (Z ) n) n)")
                                    (premises
                                      (Rule
                                        (= t49 t49)
                                        (name
                                          "(rewrite (Plus (S m) n) (S (Plus m n)))")
                                        t51
                                        t52))
                                    (substitution t47 (@rewrite_var__ t49)))
                                  0)
                                0)
                              1)))
(let t54 (n t4))
(let t55 (substitution (@rewrite_var__1 t3) (m (S (Z))) t54))
(let t56
  (premises
                        (Rule
                          (= t5 t5)
                          (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                          t53
                          t55)))
(let t57 (substitution (@rewrite_var__1 t5) (m (Z)) t54))
(let prop2 (= t6 t3))
(Trans
  prop0
  prf0
  (Trans
    prop0
    (Sym
      prop1
      (Sym
        (= t6 t1)
        (Congr
          prop1
          (Sym
            (= t1 t9)
            (Rule
              (= t9 t1)
              (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
              t14
              t17))
          (Trans
            (= t8 t5)
            (Congr
              (= t8 t18)
              (Sym
                (= t8 t20)
                (Rule
                  (= t20 t8)
                  (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                  t21
                  t22))
              (Congr
                (= t19 t4)
                (Congr
                  (= t19 (S t7))
                  (Sym
                    (= t19 t24)
                    (Rule
                      (= t24 t19)
                      (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                      t25
                      t26))
                  (Rule
                    (= t23 t7)
                    (name "(rewrite (Plus (Z ) n) n)")
                    (premises
                      (Rule
                        (= t23 t23)
                        (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                        t25
                        t26))
                    (substitution t16 (@rewrite_var__ t23)))
                  0)
                (Congr
                  (= t7 t0)
                  (Sym
                    (= t7 t29)
                    (Rule
                      (= t29 t7)
                      (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                      t33
                      t34))
                  (Congr
                    (= t28 (S (S (Z))))
                    (Sym
                      (= t28 t36)
                      (Rule
                        (= t36 t28)
                        (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                        t37
                        t38))
                    (Congr
                      (= t35 (S (Z)))
                      (Sym
                        (= t35 t39)
                        (Rule
                          (= t39 t35)
                          (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                          t40
                          t41))
                      (Rule
                        (= (Plus (Z) (Z)) (Z))
                        (name "(rewrite (Plus (Z ) n) n)")
                        (premises
                          (Rule
                            (= (Plus (Z) (Z)) (Plus (Z) (Z)))
                            (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                            t40
                            t41))
                        (substitution (n (Z)) (@rewrite_var__ (Plus (Z) (Z)))))
                      0)
                    0)
                  0)
                0)
              0)
            (Sym
              (= t18 t5)
              (Congr
                (= t5 t18)
                (Sym
                  (= t5 t43)
                  (Rule
                    (= t43 t5)
                    (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                    t56
                    t57))
                (Rule
                  (= t42 t4)
                  (name "(rewrite (Plus (Z ) n) n)")
                  (premises
                    (Rule
                      (= t42 t42)
                      (name "(rewrite (Plus (S m) n) (S (Plus m n)))")
                      t56
                      t57))
                  (substitution t54 (@rewrite_var__ t42)))
                0)))
          0)))
    (Sym
      prop2
      (Sym
        (= t3 t6)
        (Rule prop2 (name "(rewrite (Plus (S m) n) (S (Plus m n)))") t53 t55)))))
Plus: 14
S: 6
Times: 3
Z: 1
