tests/snapshots/files__naturals_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
Plus: 18
Plus: 14
S: 18
S: 6
Times: 3
Times: 3
Z: 1
Z: 1
