tests/snapshots/files__path.snap
---
source: tests/files.rs
expression: snapshot_content
---
(
   (path 1 2)
   (path 3 4)
   (path 2 3)
   (path 2 4)
   (path 1 3)
   (path 1 4)
)
