tests/snapshots/files__path_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Fiat (= (edge 1 2) (edge 1 2)))
(Rule
  (= (path 1 4) (path 1 4))
  (name
    "(rule ((path x y)
       (edge y z))
      ((path x z))
         )")
  (premises
    (Rule
      (= (path 1 3) (path 1 3))
      (name
        "(rule ((path x y)
       (edge y z))
      ((path x z))
         )")
      (premises
        (Rule
          (= (path 1 2) (path 1 2))
          (name
            "(rule ((edge x y))
      ((path x y))
         )")
          (premises (Fiat (= (edge 1 2) (edge 1 2))))
          (substitution (x 1) (y 2)))
        (Fiat (= (edge 2 3) (edge 2 3))))
      (substitution (z 3) (x 1) (y 2)))
    (Fiat (= (edge 3 4) (edge 3 4))))
  (substitution (z 4) (x 1) (y 3)))
edge: 3
path: 6
