tests/snapshots/files__path_union_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(let t0 (edge (mk 5) (mk 6)))
(let prop0 (= t0 (edge (mk 3) (mk 6))))
(Congr
  prop0
  (Congr prop0 (Fiat (= t0 t0)) (Fiat (= (mk 5) (mk 3))) 0)
  (Fiat (= (mk 6) (mk 6)))
  1)
(let t0 (path (mk 1) (mk 6)))
(let prop0 (= t0 t0))
(let t1 (path (mk 1) (mk 3)))
(let t2 (path (mk 1) (mk 2)))
(let t3 (edge (mk 1) (mk 2)))
(let t4 (edge (mk 2) (mk 3)))
(let t5 (edge (mk 5) (mk 6)))
(Congr
  prop0
  (Rule
    prop0
    (name
      "(rule ((path x y)
       (edge y z))
      ((path x z))
         )")
    (premises
      (Rule
        (= t1 t1)
        (name
          "(rule ((path x y)
       (edge y z))
      ((path x z))
         )")
        (premises
          (Rule
            (= t2 t2)
            (name
              "(rule ((edge x y))
      ((path x y))
         )")
            (premises (Fiat (= t3 t3)))
            (substitution (x (mk 1)) (y (mk 2))))
          (Fiat (= t4 t4)))
        (substitution (z (mk 3)) (x (mk 1)) (y (mk 2))))
      (Congr
        (= t5 (edge (mk 3) (mk 6)))
        (Fiat (= t5 t5))
        (Fiat (= (mk 5) (mk 3)))
        0))
    (substitution (z (mk 6)) (x (mk 1)) (y (mk 3))))
  (Fiat (= (mk 6) (mk 6)))
  1)
edge: 3
mk: 5
path: 6
